# ribbon

./: Cargo.toml  README.md  events.ndjson
.github/workflows/: ci.yml  release.yml
.pi/agents/: ribbon-engine.md
.ribbon/: config.toml  scope.toml
src/: config.rs  event.rs  lib.rs  main.rs  render.rs  store.rs  verify.rs
